This is my 2nd Computer Homework.

--- a/Q3.ipynb
+++ b/Q3.ipynb
@@ -663,7 +663,7 @@
     "\n",
     "**Question**: What is the accuracy of this method on test set?\n",
     "\n",
-    "**Answer**:"
+    "**Answer**: Accuracy of Gaussian Naive Bayes classifier on test set: 0.956"
    ]
   },
   {
@@ -715,7 +715,7 @@
     "\n",
     "**Question**: What is the accuracy of this method on test set?\n",
     "\n",
-    "**Answer**:"
+    "**Answer**: Accuracy of Linear Discriminant Analysis classifier on test set: 0.988"
    ]
   },
   {
@@ -764,14 +764,22 @@
     "\n",
     "**Question**: What is the best method for classifying this dataset? What is the best accuracy on the test set?\n",
     "\n",
-    "**Answer**: Based on the accuracies:\n",
+    "**Answer**: Based on the provided accuracies, Linear Discriminant Analysis (LDA) seems to be the best method for classifying this dataset. Here's why:\n",
     "\n",
-    "- Gaussian Naive Bayes classifier: Accuracy on the test set = 0.956\n",
-    "- Linear Discriminant Analysis classifier: Accuracy on the test set = 0.988\n",
+    "1. **Accuracy Comparison**:\n",
+    "   - Gaussian Naive Bayes (GNB) classifier: Accuracy on the test set is 0.956.\n",
+    "   - Linear Discriminant Analysis (LDA) classifier: Accuracy on the test set is 0.988.\n",
+    "   - The LDA classifier has a higher accuracy compared to the GNB classifier.\n",
     "\n",
-    "The Linear Discriminant Analysis (LDA) classifier appears to be the better method for classifying this dataset, as it achieved a higher accuracy of 0.988 compared to the Gaussian Naive Bayes classifier's accuracy of 0.956 on the test set.\n",
+    "2. **Performance**:\n",
+    "   - LDA outperforms GNB in this scenario. LDA is known for its effectiveness when the assumption of Gaussian distribution holds true for the data. If the data indeed follows a Gaussian distribution, LDA can provide more accurate results compared to GNB, which makes naive assumptions about the conditional independence of features given the class label.\n",
+    "   - LDA tries to find the linear combinations of features that best separate the classes. If the underlying data distribution is close to Gaussian and the classes are well-separated, LDA can achieve high accuracy.\n",
+    "   - Additionally, LDA typically performs well when the number of samples per class is balanced, which might be the case here.\n",
     "\n",
-    "Therefore, the best method for classifying this dataset is the Linear Discriminant Analysis classifier, which achieved the highest accuracy of 0.988 on the test set."
+    "3. **Accuracy on the Test Set**:\n",
+    "   - The accuracy of 0.988 achieved by the LDA classifier indicates that it correctly classifies 98.8% of the instances in the test set. This is a high accuracy rate and suggests that the model is effective in distinguishing between the different classes in the dataset.\n",
+    "\n",
+    "In conclusion, the Linear Discriminant Analysis (LDA) classifier is the best method for classifying this dataset based on its higher accuracy on the test set compared to the Gaussian Naive Bayes (GNB) classifier. The best accuracy achieved on the test set is 0.988 using the LDA classifier."
    ]
   }
  ],
